--- a/code/style.css
+++ b/code/style.css
@@ -1,11 +1,8 @@
 body {
     font-family: Work Sans;
     margin: 0;
-}
-
-main {
-    display: flex;
-    flex-direction: column;
+    border: 0;
+    padding: 0;
 }
 
 a {
@@ -38,11 +35,11 @@ footer a {
 header {
     display: flex;
     justify-content: center;
-    width: 100%;
-    margin-bottom: 10px 20px;
+    margin: 10px 20px;
 }
 h1 {
     align-self: center;
+    color: rgb(107, 106, 105);
 }
 
 .logo {
@@ -63,51 +60,48 @@ h3 {
 p {
     line-height: 1.5;
 }
-hr {
-    border: 1px solid grey;
-    margin: 1%;
-}
 /* main news */
-.main-news-img, .main-news-content {
-    width: 80%;
-    margin: auto;
-    gap: 10px;
+.main-news {
+    background-color: rgba(199, 199, 199, 0.205);
+    padding: 1vw;
 }
 .main-news-img {
-    display: flex;
-    margin-bottom: 20px;
-    border-radius: 10px;
+    width: 100%;
 }
 .main-news-content p {
     padding: 10px;
 }
 
 /* other news */
-.other-news * {
+.other-news {
     display: flex;
     flex-direction: column;
-    width: 85%;
+    width: 100%;
+    height: 100%;
     margin: auto;
 }
-article {
-    padding-top: 20px;
-}
-article a {
-    box-sizing: content-box;
+.other-news img {
+    display: flex;
+    justify-self: center;
     width: 100%;
 }
-
-.other-news img {
-    box-shadow: 0 2px 2px rgba(136, 130, 130, 0.4);;
-    align-self: center;
+/* .other-news *:not(h3) {
+    display: flex;
+    flex-direction: column;
+    width: 90%;
+    height: 100%;
+    margin: auto;
+} */
+article {
+    padding: 2vw;
 }
-/* polaroid effect */
+
 .other-news-polaroid {
-    padding: 10px 0 10px 0;
+    padding: 10px;
     margin-bottom: 20px;
     background-color: white;
     box-shadow: 0 2px 2px rgba(136, 130, 130, 0.4);
-}
+} 
 
 /* Animation part (Demo)
 If there's no forwards, the header will disappear after it has expanded!
@@ -121,9 +115,7 @@ So I set it at 0 0 so it starts from the left of the x axis */
 }
 a:hover {
     font-weight: 600;
-    background: linear-gradient(90deg, rgb(230, 177, 108), rgb(211, 69, 44));
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
+    color:rgb(223, 138, 117);
 }
 
 @keyframes expandLogo {
@@ -146,22 +138,18 @@ a:hover {
         display: flex;
         flex-direction: column;
         margin: auto;
-        padding: 20px;
     }
     .desktop-view-logo {
         display: flex;
         align-self: center;
-        width: 250px;
+        width: 200px;
     }
     nav {
         display: flex;
         align-self: center;
-        padding: 20px;
     }
-    
-    ul {
-        list-style-type: none;
-        display: flex;
+    li {
+        display: inline-block;
     }
 
     nav a {
@@ -173,68 +161,35 @@ a:hover {
     .social-icons {
         display: none;
     }
-    
-    .breaker {
-        display: block;
-        align-self: center;
-        width: 90%;
-        margin-top: 2vw;
-        border-bottom: 2px solid rgb(214, 116, 116);
-    }
-/* main news */
     .main-news {
         display: flex;
-        gap: 30px;
-        margin-left: 30px;
+        gap: 20px;
     }
     .main-news-img {
         width: 50%;
         margin: auto;
     }
-/* other news */
-    .other-news {
-        columns: 2;
+    .main-news-content {
+        align-self: center;
     }
-    .other-news article {
-        -webkit-column-break-inside: avoid;
-        page-break-inside: avoid;
-        break-inside: avoid;
+    .other-news {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
     }
 }
 /* Desktop view */
 @media (min-width: 1024px) {
-    .other-news{
-        columns: 4;
-        margin-top: 20px;
-    }
-    .other-news article {
-        padding: 0;
-    }
-    .other-news * {
-        width: 95%;
-    }
-    .main-news-img {
-        width: 40%;
-    }
-    .main-news-content {
-        width: 50%;
-        align-self: center;
-    }
     header {
         display: flex;
         flex-direction: row;
+        justify-content: space-between;
     }
     nav {
-        display: flex;
-        align-self: center;
+        align-self: flex-end;
+        padding: 0;
     }
-    
-    ul {
-        list-style-type: none;
-        display: flex;
-    }
-    ul li {
-        margin: 2vw;
-        font-size: 20px;
+    .other-news {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr 1fr;
     }
 }
