made small changes before the pull request

--- a/code/style.css
+++ b/code/style.css
@@ -272,7 +272,7 @@ main {
   display: none;
 }
 
-/* Opacity effect all over the feature section when hovering */
+/* Opacity effect with white background so the text doesn't appear pink all over the feature section when hovering */
 @media (min-width: 1025px) {
   .feature:hover {
     background-color: white;
