--- a/code/style.css
+++ b/code/style.css
@@ -368,7 +368,7 @@ footer {
   justify-content: space-between;
   background-color: #82171A;
   padding: 2rem;
-  font-size: 1rem;
+  font-size: 0.75rem;
   font-family: 'Raleway', sans-serif;
 }
 
@@ -384,12 +384,18 @@ footer {
 }
 
 .fab {
-  font-size: 1.5rem;
+  font-size: 1rem;
 }
 
 @media (min-width: 1025px) {
   footer {
     padding: 2rem 6rem;
+    font-size: 1rem;
   }
+
+  .fab {
+    font-size: 1.25rem;
+  }
+  
 }
 /* END Footer */
