--- a/code/style.css
+++ b/code/style.css
@@ -1,50 +1,340 @@
-html {
-  background: #0025ff;
-  color: #fff;
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-/*big news styles*/
 
-/*big news 'parent' (=section) style*/
-.big-news{
-  background-color: aqua;
-  width:100%;
-  height: 100%;
+/*style for header*/
+header{
+  height: 150px;
+  background-color: white;
   display: flex;
-  flex-direction: column;
-  justify-content: center;
   align-items: center;
+  margin-bottom: 5em;
 }
 
-/*big news 'first child' (=picture) style*/
-.big-news-image{
-  background-color: grey;
-  margin: 10px;
+/*Style for fake logo*/
+.logo-mobile {
+  width: 4rem;
+  height: 4rem;
+  border-radius: 50%;
+  color: #18a999;
+  background-color: #001524;
+  display: grid;
+  place-items: center;
+  margin: 1em;
+}
+
+
+.site-name{
+  font-family: 'Indie Flower', cursive;
+}
+
+p{
+  color: black;
+  font-family: 'Lato',sans-serif;
+  text-align: justify;
+  line-height: 1.5;
+  margin-top: 1rem;
+}
+
+a{
+  color: black;
+  font-size: 24px;
+  text-decoration: none;
+}
+
+.link-read-more{
+  color: black;
+  font-size: 16px;
+  text-decoration: none;
+  font-weight: bold;
+}
+
+a:link, a:visited {
+  color: #001524;
+  }
+  
+  a:hover, a:active {
+    color: #18a999;
+  }
+
+.navbar-tablet{
+  display: none;
+}
+
+.navbar-desktop{
+  display: none;
+}
+
+/*style for menu icon*/
+.menu-icon{
+  margin-left:auto;
+  color:#18a999;
+  height:36px;
+  width: 36px;
+  padding: 1em;
+}
+
+/*style for tablets*/
+@media (min-width: 667px) and (max-width:1024px){
+  .logo-mobile{
+    display: none;
+  }
+
+.site-name{
+    display: none;
+  }
+  .navbar-tablet{
+    display: flex;
+    flex-grow: 1;
+    justify-content: space-evenly;
+    align-items: center;
+
+  }
+  .logo-tablet {
+    width: 4rem;
+    height: 4rem;
+    border-radius: 50%;
+    background-color: #001524;
+    color: #18a999;
+    display: grid;
+    place-items: center;
+    margin: 1em;
+  }
+  .menu-icon{
+    display: none;
+  }
+}
+/*style for desktops*/
+@media (min-width:1025px){
+  .navbar-desktop{
+    display: flex;
+    margin-left:auto;
+  }
+  .links-style-desktop{
+    margin: 2em;
+  }
+  .menu-icon{
+    display: none;
+  }
+
+}
+
+
+/*styles for big news section*/
+.big-news{
+  display: flex;
+  width: 100%;
+  flex-direction: column;
+
+}
+
+.big-news-image-container{
+  width: 100%-1em;
+  position: relative;
+  margin: 1em;
+  align-content: center;
+
+}
+
+.polaroid { 
+	transition: all 0.5s ease-in-out; 
+}
+.polaroid:hover { 
+    	transform: scale(1.1) rotate(-5deg);
+    }
+
+.big-news-image-container .polaroid{
+    border: 1px solid darkgrey;
+    background-color: white;
+    padding: 15px 15px 60px 15px;
+    box-shadow: 5px 10px 10px darkgrey;
+}
+.big-news-image-container .polaroid:after{
+  content: attr(polaroid-caption);
+  position: absolute;
+  bottom: 0px;
+  left: 0px;
+  width: calc(100% - 20px);
   padding: 10px;
-  width: 90%;
-  height: 90%;
+  font-size: 30px;
+  text-align: center;
+  font-family: 'Indie Flower', cursive;
+}
+
+.big-news-image{
+  width: 100%;
   object-fit: cover
 }
 
-/*big news 'second child' (=text) style*/
-.big-news-text{
-  background-color: pink;
-  margin: 10px;
-  padding: 10px;
-  width:90%;
+.big-news-text-container{
+  
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 2em;
 }
 
-/*big news styles for tablet and desktops*/
-@media (min-width: 667px){
+.big-news-text-tablets-desktops{
+  display: none;
+}
+
+
+/*style for big news section for tablets*/
+@media (min-width:667px) and (max-width:1024px){
   .big-news{
-    background-color: coral;
     flex-direction: row;
-    align-items: stretch;
+    margin-bottom: 5em;
+    align-items: center;
   }
-  .big-news-image{
-    width: 30%;
+  .big-news-image-container{
+    width: 50%;
   }
-  .big-news-text{
-    width: 60%;
+  .big-news-text-container{
+    width: 50%;
   }
+  .big-news-text-tablets-desktops{
+    display: block;
+  }
+  .big-news-text-mobile{
+    display: none;
+  }
+  .big-news-title{
+    font-size: 1.8rem;
+  }
+}
+
+/*style for big news section for desktops*/
+@media (min-width:1025px){
+
+  .big-news{
+    flex-direction: row;
+    margin-bottom: 5em;
+    align-items: center;
+  }
+  .big-news-image-container{
+    width: 45%;
+  }
+  .big-news-text-container{
+    width: 55%;
+  }
+  .big-news-text-tablets-desktops{
+    display: block;
+  }
+  .big-news-text-mobile{
+    display: none;
+  }
+  .big-news-title{
+    font-size: 3.6rem;;
+  }
+}
+
+
+/*styles for news cards section*/
+.news-cards-parent{
+  display: flex;
+  width: 100%;
+  height: 100%;
+  flex-direction: column;
+  background-color: white;
+  margin-top: 10em;
+  margin-bottom: 10em;
+}
+
+.news-card-child{
+  padding: 1em;
+  display: flex;
+  height: auto;
+  flex-direction: column;
+}
+
+.news-card-image-container{
+  width: 100%;
+  position: relative;
+  background-color: white;
+}
+
+.news-card-image-container .polaroid{
+  border: 1px solid darkgrey;
+  background-color: white;
+  padding: 15px 15px 60px 15px;
+  box-shadow: 5px 10px 10px darkgrey;
+}
+.news-card-image-container .polaroid:after{
+content: attr(polaroid-caption);
+position: absolute;
+bottom: 0px;
+left: 0px;
+width: calc(100% - 20px);
+padding: 10px;
+font-size: 30px;
+text-align: center;
+font-family: 'Indie Flower', cursive;
+}
+
+.news-card-image{
+width: 100%;
+object-fit: cover;
+}
+
+.news-card-text-container{
+  padding: 1em;
+  width: 100%;
+}
+
+.card-text{
+  font-size: 1.6rem;
+}
+
+
+/*styles for news cards section for tablets*/
+@media (min-width: 667px) and (max-width:1024px){
+  .news-cards-parent{
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+  .news-card-child{
+    width: 50%;
+  }
+  .news-card-image{
+    width: 100%;
+    min-height: 200px;
+    max-height: 20px;
+    object-fit: cover;
+    }
+}
+
+/*styles for news cards section for desktops*/
+@media (min-width:1024px){
+  .news-cards-parent{
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+  .news-card-child{
+    width: 25%;
+  }
+  .news-card-image{
+    width: 100%;
+    min-height: 200px;
+    max-height: 220px;
+    object-fit: cover;
+    }
+}
+
+/*Styles for footer*/
+footer{
+  background-color: black;
+  height: 150px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 5em;
+}
+
+.footer-text{
+  color: white;
 }
