--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,112 @@
-html {
-  background: #0025ff;
-  color: #fff;
+
+.logo {
+font-size: 50px;
+font-family: 'Anton', sans-serif;
+padding: 15px;
+display:flex;
+margin-left: 25px;
+margin-right: 25px;
+}
+
+
+.big-news {
+background: red;
+border: 4px solid;
+justify-content: flex-end;
+
+}
+
+.big-news img {
+  width: 50%
+
+
+}
+
+header {
+  width: 100%;
+  height: 75px;
+  background-color: lightgrey;
+  display: flex;
+  
+  
+}
+
+.links {
+display:flex;
+padding: 5px;
+font-family: 'Anton', sans-serif;
+justify-content: space-evenly;
+
+
+
+
+}
+
+
+
+a {
+  color: black;
+}
+
+a:hover {
+color: green;
+
+
+}
+h1 {
+font-size: 50px;
+font-family: Arial, Helvetica, sans-serif;  
+}
+
+
+
+
+.other-news {
+background: green;
+border: 4px solid;
+display: flex;
+justify-content: space-evenly;
+flex: inline;
+flex-direction: column;
+}
+
+.other-news img {
+width: 100%
+
+
+}
+
+
+
+/* mobile*/
+@media (max-width: 668px)   {
+ 
+.logo {
+display: none;
+
+}  
+    
+
+  
+
+
+}
+
+
+/* tablet*/
+@media (min-width: 667px) and (max-width: 1024px) {
+.other-news {
+
+
+  
+}
+  
+
+}
+/* Desktop*/
+@media (min-width: 1025px) {
+
+
+
+
 }
