--- a/code/style.css
+++ b/code/style.css
@@ -21,6 +21,7 @@ nav {
 a {
   color: #f3e8dd;
   text-decoration: none;
+  font-weight: bold;
 }
 
 .menu {   
@@ -34,6 +35,8 @@ a {
 .logo {
   font-size: 20px;
   padding: 7.5px 10px 7.5px 0;
+  font-weight: bolder;
+  color: #ffafaf;
 }
 
 .item {
@@ -121,7 +124,7 @@ a {
   margin-bottom: 10px;
 }
 
-/* Social Media */
+/* Footer wiht social media */
 #lab_social_icon_footer {
   padding: 15px 0;
   background-color: #13233d;
@@ -134,22 +137,6 @@ a {
   color: #f3e8dd;
 } 
 
-#lab_social_icon_footer .social:hover {
-  -webkit-transform: scale(1.1);
-  -moz-transform: scale(1.1);
-  -o-transform: scale(1.1);
-}  
-
-#lab_social_icon_footer .social {
-  -webkit-transform: scale(0.8); 
-
-  /* Browser Variations: */
-  -moz-transform: scale(0.8);
-  -o-transform: scale(0.8);
-  -webkit-transition-duration: 0.5s;
-  -moz-transition-duration: 0.5s;
-  -o-transition-duration: 0.5s;
-} 
 
 /* Multicoloured Hover Variations */
 #lab_social_icon_footer #social-tw:hover {
@@ -172,6 +159,10 @@ a {
   /* Logo & Navbar */
   .menu {
       justify-content: center;
+  }
+
+  a:hover {
+    color: #ffafaf;
   }
 
   .logo {
