--- a/code/style.css
+++ b/code/style.css
@@ -81,10 +81,11 @@ a:hover {
     p{
       font-size: 25px;
       margin:20px 5px 5px 5px;
+      font-weight: bold;
     }
 
-    .h2{
-      font-size: 30px;
+    h2{
+      font-size: 40px;
     }
 
     .h2_{
@@ -135,6 +136,7 @@ footer {
   font-size: 1.5em;
   display: flex;
   justify-content: center;
+  
 }
 
 .fa {
@@ -196,6 +198,9 @@ footer {
     margin:0px;
   }
 
+  h2{
+    font-size: 30px;
+  }
   
   p{
     font-size: 20px;
