--- a/code/style.css
+++ b/code/style.css
@@ -16,12 +16,14 @@
 
   
   header {
+    width:  100%;
+    border: 10px solid rgb(79, 126, 128);
     display:flex;
     flex-direction: row;
     flex-wrap: space-between;
     justify-content: flex-start;
     -webkit-border-radius: 15px 15px 0 0;
-    background-color: rgba(30, 30, 48, 0.336);
+    background-color: rgb(79, 126, 128);
     margin: 40px 60px 0 60px;
     padding: 20px;
     overflow: hidden;
@@ -118,13 +120,14 @@
 
   
   .big-news-container{
+    width: 100%;
     display:flex;
     flex-direction: row;
     justify-content: center;
     align-content: center;
     /* align-content: center; */
     /* justify-content: space-evenly; */
-    border: 5px solid black;
+    border: 10px solid black;
     background-color: rgba(255, 255, 0, 0.651);
     margin:0 60px 0 60px;
     padding: 10x 0 10px 0;
@@ -168,6 +171,8 @@
 
   
   .small-news-container {
+    width: 100%;
+    border: 10px solid rgb(21, 21, 54);
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
@@ -216,6 +221,7 @@
   
   
   footer {
+    width: 100%;
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
@@ -243,12 +249,10 @@
   @media (min-width: 669px) and (max-width: 1024px) {
 
 
-    body {
-      display: flex;
-      flex-direction: column;
-    }
 
     /* --------header section-------- */
+
+  
     h1 {
       font-size: 250%;
       margin: 45px 0 0 25px;
@@ -280,6 +284,7 @@
    /* --------big news section--------- */
    
     .big-news-container {
+      
        flex-direction: row;
        justify-content: space-evenly;
        
@@ -323,6 +328,7 @@
      /* -------small news section--------- */
    
      .small-news-container {
+      
        padding: 0 0 0 90px;
        flex-wrap: wrap;
        height: 100%;
@@ -350,7 +356,7 @@
 
 
     header {
-      /* flex-direction: row; */
+      width: 90%;
       flex-wrap: nowrap;
       align-content: center;
     }
@@ -371,7 +377,7 @@
 
 
     .logo-img {
-      width: 100%;
+      width: 80%;
       height: auto;
     }
    
@@ -384,8 +390,8 @@
       flex-direction: row;
       flex-wrap: wrap;
       justify-content: center;
-      width: auto;
-      height: 50%;
+      width: 10%;
+      height: 100%;
       margin: 0 0 0 20px;
       padding: 10px;
       
@@ -401,20 +407,21 @@
     }
 
     h1 {
-      font-size: 150%;
-      padding: 35px 0 0 0;
-      margin: 0;
+      font-size: 180%;
+      padding: 20px 30px 0 0;
+      margin: 0 0 0 0;
     }
 
     .kids-ed {
-      font-size: 25%;
-      margin: 0;
+      font-size: 40%;
+      margin-top: 0;
      
     }
 
      /*  -------big news section------- */
 
     .big-news-container {
+      width: 100%;
       flex-wrap: wrap-reverse;
       /* flex-direction: row; */
    
@@ -455,6 +462,7 @@
    /* -----------small news section------- */
 
     .small-news-container {
+      width: 100%;
       flex-wrap: wrap;
       justify-content: center;
       overflow: hidden;
@@ -472,7 +480,7 @@
       
     }
     .small-img {
-      width: 100%;
+      width: 75%;
       height: auto;
       
     }
@@ -483,16 +491,16 @@
 
     .footer-list {
       color: chocolate;
-      font-size: 50%;
+      font-size: 60%;
       margin: 0 60px 0 0;
     }
 
     .one {
-      margin: 0;
+      margin: 0 0 0 80px;
     }
 
     .two {
-      margin: 0;
+      margin: 0 50px 0 50px;
     }
   
   }
