--- a/code/style.css
+++ b/code/style.css
@@ -9,7 +9,6 @@ body {
   min-height: 200vh;
 }
 
-
 /* Header with logo and soc-med links in fullscreen and only "CNN" on small screen*/
 
 header {
@@ -30,7 +29,6 @@ a {
   color: black;
   text-decoration: none;
 }
-
 
 /*Covid virus logo*/
 .logo-imgs {
@@ -59,7 +57,6 @@ a {
   from { opacity: 0; }
   to { opacity: 1; }
 }
-
 
 /*links to soc-med*/
 .soc-med {
@@ -97,7 +94,6 @@ a {
   max-width: max-content;
   font-weight: 500;
 }
-
 
 h1 {
   font-size: 4rem;
@@ -193,7 +189,6 @@ footer {
   align-items: center;
 }
 
-
 /* Changes header to flex container for larger screens 
     makes virus logo and soc-med links visible on large screens*/
 @media (min-width: 1025px) {
@@ -225,5 +220,14 @@ footer {
 
   .soc-med {
     display: grid;
+  }
+
+  .card {
+    max-width: 300px;
+  }
+  
+  /*Second row of cards with pic*/
+  .card-pic {
+    width: 300px;
   }
 }
