--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,279 @@
-html {
-  background: #0025ff;
-  color: #fff;
+*{
+  margin: 0;
+  padding: 0;
+  text-decoration: none;
+  list-style: none;
+  box-sizing: border-box;
 }
+
+
+body{
+  width: 100%;
+  min-height: 100%;
+  background: rgb(34,193,195);
+  background: linear-gradient(0deg, rgba(34,193,195,0.7147233893557423) 0%, rgba(196,216,237,1) 58%);
+  display: flex;
+  flex-direction: column;
+  
+}
+
+
+
+header{
+display: flex;
+align-items: center;
+width: 100%;
+
+} 
+
+nav{
+width: 100vw;  
+height: 100px;
+}
+
+.logo{
+  font-family: 'Roboto', sans-serif;
+  font-size: 60px;
+  color: #fff;
+  padding: 20px 0px 20px 60px;
+}
+
+.dropdown {
+  display: flex;
+  justify-content: flex-end;
+  align-content: flex-start; 
+  color: black;
+  padding: 14px;
+  line-height: 40px;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: rgb(197, 197, 197);
+  min-width: 10px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  padding: 20px 10px;
+  border-radius: 10px;
+}
+
+.dropdown-list a {
+  color: #FFF;
+  font-size: 20px;
+  padding: 14px 13px;
+  text-transform: uppercase;
+  border-radius: 10px;
+  font-family: Arial, Helvetica, sans-serif;
+  }
+
+a:hover{
+    animation: blinker 2s linear infinite;
+  }
+
+
+@keyframes blinker {
+  50% {
+    opacity: 0;
+  }
+}
+
+
+.dropdown-content a:hover {
+  background-color: rgb(128, 51, 51);
+}
+
+.dropdown:hover .dropdown-content {
+  display:list-item;
+}
+
+.dropdown:hover .dropbtn {
+  background-color: rgb(255, 213, 198);
+}
+
+.container-1{
+  display: flex;
+  position: relative;
+  flex-direction: column;
+  padding: 10px;
+  box-sizing: border-box;
+}
+
+
+h1 {
+  font-size: 15px;
+  margin: 0px 0px 10px 0px;
+  font-family: Arial, Helvetica, sans-serif
+}
+
+ .container-1 h2 {
+  padding: 30px 0px;
+  font-family: Quicksand;
+  font-size: 20px;
+} 
+
+
+.container-2 h2 {
+  padding: 20px 0px;
+  font-family: Quicksand;
+  font-size: 20px;
+} 
+
+
+
+.container-2, .container-3{
+  display: flex;
+  flex-direction: column;
+}
+
+.container-2 img{
+  width: 100%;
+  height: auto; 
+  margin-inline-start: 20px;
+}
+
+ .second-news-text{
+  align-items: flex-start;
+  width: 100%;
+  padding: 40px;
+  font-family: 'Raleway', sans-serif; 
+}
+
+.container-3{
+  
+display: grid;
+grid-template-columns: repeat(1, 1fr);
+grid-template-rows: repeat(4, 120vw);
+grid-gap: 15px;
+} 
+
+.blog-post img{
+  max-width: 70%;
+  height: auto;
+}
+
+.blog-post {
+  font-family: Raleway;
+  margin: 2rem;
+  text-align: center;
+  background: rgb(241, 241, 233);
+  border-radius: 2rem;
+  height: 90%;
+
+}
+
+.blog-post p{
+  font-size: 1rem;
+}
+
+footer {
+  display: flex;
+  justify-content: center;
+  background-color: rgba(255, 228, 196, 0.349);
+  }
+
+  footer p {
+    margin-left: 2rem;
+    font-family: 'Roboto Mono', monospace;
+  }
+
+/*Tablet*/ 
+
+@media (min-width: 667px) and (max-width: 1024px){
+  body{
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+
+  .big-news h1{
+    font-size: 30px;
+    bottom: 45%;
+    width: 60%;
+  }
+
+  .container-2{
+    flex-direction: column;
+    padding: 10px;
+    margin: 30px;
+  }
+
+  .container-3{
+    display: grid;
+    grid-template-columns: repeat(2, 2fr);
+    grid-template-rows: repeat(4, 60vw);
+    } 
+}
+
+
+@media (min-width: 1025px) {
+  body {
+    justify-content: left;
+}
+
+p{
+  font-size: 18px;
+  line-height: 32px;
+}
+
+h1 {
+  font-size: 30px;
+}
+
+.container-1 h2{
+  font-size: 30px;
+}
+
+.container-2 h2{
+  font-size: 30px;
+}
+
+.menu-button {
+  display: none;
+}
+
+.dropdown-content {
+  display: block;
+  position: static;
+  background: transparent;
+  box-shadow: none;
+}
+
+.dropdown-list {
+  display: flex;
+}
+
+.big-news h1{
+  background-color: black;
+  position: absolute;
+  color: white;
+  bottom: 40%;
+  width: 40%;
+  padding: 30px;
+}
+
+
+
+.container-2{
+  flex-direction: row;
+  padding: 10px;
+  margin: 30px;
+}
+
+.second-news {
+  width: 80%;
+}
+
+.second-news-text{
+  padding: 20px 40px 40px 50px;
+  width: 800px;
+}
+
+ .container-3 {
+  display: grid;
+  grid-template-columns: repeat(4, 2fr);
+  grid-template-rows: repeat(2, 30vw);
+  } 
+}
+
+
+
+
